Adding expand functionality to API, Create user association route, working fetch associations w/ expanded organization calls to client
